Updated CMAC-AES/TDES and AES-GMAC test vector data to include missing values.

--- a/src/mac/sections/06-cmac-aes-test-vectors.adoc
+++ b/src/mac/sections/06-cmac-aes-test-vectors.adoc
@@ -28,11 +28,11 @@ Each test group contains an array of one or more test cases. Each test case is a
 [[cmac_aes_vs_tc_table2]]
 .CMAC-AES Test Case JSON Object
 |===
-| JSON Value | Description | JSON type
+| JSON Value | Description | JSON tSype
 
 | tcId | Numeric identifier for the test case, unique across the entire vector set | integer
 | key | Encryption key to use | hex
-| msg | Value of the message | hex
+| message | Value of the message | hex
 | mac | MAC value, for CMAC verify | hex
 |===
 
