--- a/src/mac/sections/06-cmac-tdes-test-vectors.adoc
+++ b/src/mac/sections/06-cmac-tdes-test-vectors.adoc
@@ -14,9 +14,10 @@ The testGroups element at the top level in the test vector JSON object is an arr
 | tgId | Numeric identifier for the test group, unique across the entire vector set | integer
 | testType | Test category type | string
 | direction | The direction of the tests - gen or ver | string
-| keyLen | Length of key in bits to use | integer
+| keyLen | Length of key in bits to use, AES only| integer
 | msgLen | Length of message in bits | integer
 | macLen | Length of MAC in bits to generate/verify | integer
+| keyingOption | The Keying Option used in TDES. Keying option 1 (1) is 3 distinct keys (K1, K2, K3). Keying Option 2 (2) is 2 distinct only suitable for decrypt (K1, K2, K1). Keying option 3 (No longer valid for testing, save TDES KATs) is a single key, now deprecated (K1, K1, K1). | array | 1, 2
 | tests | Array of individual test vector JSON objects, which are defined in <<cmac_tdes_tvjs>> | array
 |===
 
@@ -31,9 +32,9 @@ Each test group contains an array of one or more test cases. Each test case is a
 | JSON Value | Description | JSON type
 
 | tcId | Numeric identifier for the test case, unique across the entire vector set | integer
-| key1, key2, key3 | Encryption keys to use for TDES | hex
-| msg | Value of the message | hex
+| message | Value of the message | hex
 | mac | MAC value, for CMAC verify | hex
+| key1, key2, key3 | Encryption keys to use for TDES | hex
 |===
 
 [[cmac_tdes_test_vector_json]]
@@ -51,7 +52,6 @@ The following is an example JSON test vector object for CMAC-TDES, truncated for
             "tgId": 4,
             "testType": "AFT",
             "direction": "gen",
-            "keyLen": 192,
             "msgLen": 752,
             "macLen": 32,
             "keyingOption": 1,
@@ -82,7 +82,6 @@ The following is an example JSON test vector object for CMAC-TDES, truncated for
             "tgId": 10,
             "testType": "AFT",
             "direction": "ver",
-            "keyLen": 192,
             "msgLen": 0,
             "macLen": 32,
             "keyingOption": 1,
