--- a/src/mac/sections/06-gmac-test-vectors.adoc
+++ b/src/mac/sections/06-gmac-test-vectors.adoc
@@ -60,6 +60,7 @@ The following is an example JSON test vector object for AES-GMAC, truncated for 
          "keyLen": 128,
          "ivLen": 96,
          "ivGen": "external",
+         ivGenMode": "8.2.2",
          "aadLen": 0,
          "tagLen": 32,
          "tests": [{
@@ -76,6 +77,7 @@ The following is an example JSON test vector object for AES-GMAC, truncated for 
          "keyLen": 128,
          "ivLen": 96,
          "ivGen": "external",
+         ivGenMode": "8.2.2",
          "aadLen": 0,
          "tagLen": 32,
          "tests": [{
