Added a missed quotation mark and added a NOTE as to why PayloadLength is within the TestGroup though not used/accepted by GMAC.

--- a/src/mac/sections/05-gmac-capabilities.adoc
+++ b/src/mac/sections/05-gmac-capabilities.adoc
@@ -45,7 +45,7 @@ The following is an example JSON object advertising support for AES-GMAC.
        120
      ],
      "ivGen": "external",
-     ivGenMode": "8.2.2",
+     "ivGenMode": "8.2.2",
      "aadLen": [
        8,
        120
