--- a/src/mac/sections/06-gmac-test-vectors.adoc
+++ b/src/mac/sections/06-gmac-test-vectors.adoc
@@ -23,6 +23,9 @@ The testGroups element at the top level in the test vector JSON object is an arr
 | tests | Array of individual test vector JSON objects, which are defined in <<gmac_tcjs>> | array
 |===
 
+  |  NOTE: PayloadLength is not supported for GMAC, and a value of 0 is assigned 
+  |  and printed to the TestGroup's for clarity.
+
 [[gmac_tcjs]]
 ==== AES-GMAC Test Case JSON Schema
 
