Adding capabilites back

--- a/src/draft-ross-acvp-ascon.adoc
+++ b/src/draft-ross-acvp-ascon.adoc
@@ -42,7 +42,7 @@ include::common/common-sections/05-capabilities-description.adoc[]
 
 include::common/common-sections/051-prerequisites.adoc[]
 
-//include::slh-dsa/sections/05-capabilities.adoc[]
+include::slh-dsa/sections/05-capabilities.adoc[]
 
 include::slh-dsa/sections/05-slh-dsa-keygen-capabilities.adoc[]
 
