Removing capabilities again and updating draft

--- a/src/draft-ross-acvp-ascon.adoc
+++ b/src/draft-ross-acvp-ascon.adoc
@@ -34,39 +34,39 @@ include::common/common-sections/01-intro.adoc[]
 
 include::common/common-sections/02-conventions.adoc[]
 
-include::slh-dsa/sections/03-supported.adoc[]
+include::ascon/sections/03-supported.adoc[]
 
-include::slh-dsa/sections/04-testtypes.adoc[]
+include::ascon/sections/04-testtypes.adoc[]
 
 include::common/common-sections/05-capabilities-description.adoc[]
 
 include::common/common-sections/051-prerequisites.adoc[]
 
-include::slh-dsa/sections/05-capabilities.adoc[]
+//include::ascon/sections/05-capabilities.adoc[]
 
-include::slh-dsa/sections/05-slh-dsa-keygen-capabilities.adoc[]
+include::ascon/sections/05-ascon-keygen-capabilities.adoc[]
 
-include::slh-dsa/sections/05-slh-dsa-siggen-capabilities.adoc[]
+include::ascon/sections/05-ascon-siggen-capabilities.adoc[]
 
-include::slh-dsa/sections/05-slh-dsa-sigver-capabilities.adoc[]
+include::ascon/sections/05-ascon-sigver-capabilities.adoc[]
 
 //include::common/common-sections/06-test-vector-intro.adoc[]
 
-include::slh-dsa/sections/06-test-vectors.adoc[]
+include::ascon/sections/06-test-vectors.adoc[]
 
-include::slh-dsa/sections/06-slh-dsa-keygen-test-vectors.adoc[]
+include::ascon/sections/06-ascon-keygen-test-vectors.adoc[]
 
-include::slh-dsa/sections/06-slh-dsa-siggen-test-vectors.adoc[]
+include::ascon/sections/06-ascon-siggen-test-vectors.adoc[]
 
-include::slh-dsa/sections/06-slh-dsa-sigver-test-vectors.adoc[]
+include::ascon/sections/06-ascon-sigver-test-vectors.adoc[]
 
-include::slh-dsa/sections/07-responses.adoc[]
+include::ascon/sections/07-responses.adoc[]
 
-include::slh-dsa/sections/07-slh-dsa-keygen-responses.adoc[]
+include::ascon/sections/07-ascon-keygen-responses.adoc[]
 
-include::slh-dsa/sections/07-slh-dsa-siggen-responses.adoc[]
+include::ascon/sections/07-ascon-siggen-responses.adoc[]
 
-include::slh-dsa/sections/07-slh-dsa-sigver-responses.adoc[]
+include::ascon/sections/07-ascon-sigver-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
@@ -75,4 +75,4 @@ include::common/common-sections/11-iana.adoc[]
 include::common/common-sections/99-acknowledgements.adoc[]
 
 // References must be given before appendixes
-include::slh-dsa/sections/98-references.adoc[]
+include::ascon/sections/98-references.adoc[]
