Documentation cleanup and readability

--- a/src/ascon/sections/06-ascon-aead128-test-vectors.adoc
+++ b/src/ascon/sections/06-ascon-aead128-test-vectors.adoc
@@ -16,6 +16,8 @@ The test group for Ascon / AEAD128 / SP800-232 is as follows:
 | tgId | Numeric identifier for the test group, unique across the entire vector set | integer
 | testType | The test operation performed | string
 | tests | Array of individual test vector JSON objects, which are defined in <<Ascon_AEAD128_tvjs>> | array
+| direction | The direction the block cipher operates in | string
+| supportsNonceMasking | Boolean to determine if test group uses a second key for nonce masking | boolean
 |===
 
 [[Ascon_AEAD128_tvjs]]
@@ -32,14 +34,15 @@ Each test group contains an array of one or more test cases. Each test case is a
 | key | Key value | hex
 | nonce | Nonce value | hex
 | ad | Associated data value | hex
-| pt | Payload | hex
-| ptBitLength | Payload bit length | integer
+| pt | Payload in the encrypt case | hex
+| ct | Payload in the decrypt case | hex
+| payloadBitLength | Payload bit length | integer
 | adBitLength | Assoicated data bit length | integer
 | tagLength | Tag bit length | integer
 | secondKey | Second key value | hex
 |===
 
-The following is an example JSON object sent from the server to the client for Ascon / AEAD128 / FIPS205 in the encrypt direction. 
+The following is an example JSON object sent from the server to the client for Ascon / AEAD128 / FIPS205. 
 
 [source, json]
 ----
@@ -59,56 +62,77 @@ The following is an example JSON object sent from the server to the client for A
                 "testType": "AFT",
                 "tests": [
                     {
-                        "tcId": 3,
-                        "key": "CE1F4612A82B507BC8C3E9E9628F879F",
-                        "nonce": "1FAEAE936AFF885DF41A8CD5F2F01B46",
-                        "ad": "DC11EA34AC6B55ADCD5E0FA0DDCE6633296B1209989FF4E98CA5A2AE2C67BD5CD86ECC005BEB21D9277A0140A65A0C72",
-                        "pt": "D489319F0B6E243D1D01A707C8A78065A1B2C86E",
-                        "payloadBitLength": 159,
-                        "adBitLength": 383,
+                        "tcId": 60,
+                        "key": "FD49918ED109AF4237047633E899B574",
+                        "nonce": "B6B6598FFA6317E896945E69FBC05591",
+                        "ad": "47E62206F92A652B",
+                        "pt": "F2C255",
+                        "payloadBitLength": 23,
+                        "adBitLength": 64,
                         "tagLength": 64,
-                        "secondKey": "A3D9B0983143B39D1DE1394A3DD76602"
+                        "secondKey": "016FBC19B1FAF20FBC6C051B6B8543A7"
                     }
                 ]
-            }
-        ]
-    }
-]
-----
-
-The following is an example JSON object sent from the server to the client for Ascon / AEAD128 / FIPS205 in the decrypt direction. 
-
-[source, json]
-----
-[
-    {
-        "acvVersion": <acvp-version>
-    },
-    {
-        "vsId": 42,
-        "algorithm": "Ascon",
-        "mode": "AEAD128",
-        "revision": "SP800-232",
-        "isSample": true,
-        "testGroups": [
+                "direction": "encrypt",
+                "supportsNonceMasking": true
+            },
+            {
+                "tgId": 2,
+                "testType": "AFT",
+                "tests": [
+                    {
+                        "tcId": 107,
+                        "key": "66D31B340B8B4D8C82CDF4C1B76DC4A6",
+                        "nonce": "51224C04CC0D79B992826F3478DF6C95",
+                        "ad": "63BEEE9E4B971FEFABEAEBBADBF512194EB04E0E",
+                        "pt": "9596D2",
+                        "payloadBitLength": 24,
+                        "adBitLength": 160,
+                        "tagLength": 64
+                    }
+                ]
+                "direction": "encrypt",
+                "supportsNonceMasking": false
+            },
             {
                 "tgId": 3,
                 "testType": "AFT",
                 "tests": [
                     {
-                        "tcId": 171,
-                        "key": "A9B685BE3FB712E8D577B9197025BE31",
-                        "nonce": "1B226E39535EDB4E74321E907C48EECD",
-                        "ad": "CE189800",
-                        "tag": "FA1267454C135F88",
-                        "payloadBitLength": 23,
-                        "adBitLength": 25,
+                        "tcId": 125,
+                        "key": "F381BF2A2CCC344C07E30DB6D93C43A5",
+                        "nonce": "538AB0C0748FA21B4841329C640E5B8C",
+                        "ad": "6421B70D86E8CA3D80C0708F72C840717BAB0D4900",
+                        "tag": "EB8DDC8F7B32334D",
+                        "payloadBitLength": 63,
+                        "adBitLength": 161,
                         "tagLength": 64,
-                        "secondKey": "369D9368059840532564477056F6FA1D",
-                        "ct": "378F3B"
+                        "secondKey": "89ADE7BE07136C740708C8F10CF58970",
+                        "ct": "EA2649C1EDEA2F4A"
                     }
                 ]
-            }
+                "direction": "decrypt",
+                "supportsNonceMasking": true
+            },
+            {
+                "tgId": 4,
+                "testType": "AFT",
+                "tests": [
+                    {
+                        "tcId": 184,
+                        "key": "E37C0BB570A0F742C72E0F26C2A72BDD",
+                        "nonce": "49F8A80BCCCA888D053F41EE35842A78",
+                        "ad": "55D138A7B7A84454D7217121446BA4AF1050B988",
+                        "tag": "6497C727EC4CBF8F",
+                        "payloadBitLength": 383,
+                        "adBitLength": 160,
+                        "tagLength": 64,
+                        "ct": "C20807710C919109AC1618D872ABCD1D8D2B3372136BB90A309F55804C0856A6FB213C2FB3CB7B58D5DEA5FDFC208673"
+                    }
+                ]
+                "direction": "encrypt",
+                "supportsNonceMasking": false
+            },
         ]
     }
 ]
