--- a/src/ascon/sections/07-ascon-aead128-responses.adoc
+++ b/src/ascon/sections/07-ascon-aead128-responses.adoc
@@ -10,41 +10,11 @@ Each test group contains an array of one or more test cases. Each test case is a
 
 | tcId | The test case identifier | integer
 | tag | The computed tag in an encrypt directtion | hex
-| ct | The computed ciphertext in an encrypt direction | hex
-| pt | The computed plaintext in a decrypt direction | hex
+| ct | The computed ciphertext in an encrypt case| hex
+| pt | The computed plaintext in a decrypt case | hex
 |===
 
-The following is an example JSON test vector response object for Ascon / AEAD128 / SP800-232 in the encrypt direction.
-
-[source, json]
-----
-[
-    {
-        "acvVersion": <acvp-version>
-    },
-    {
-        "vsId": 0,
-        "testGroups": [
-            {
-                "vsId": 42,
-                "algorithm": "Ascon",
-                "mode": "AEAD128",
-                "revision": "SP800-232",
-                "isSample": true,
-                "testGroups": [
-                    {
-                        "tcId": 1,
-                        "tag": "E2D95B2EF1A1E75AF11EF398CD5BE0E8",
-                        "ct": "BF6CEC4E476E0CBC47287ED9B07847785D6096332CE2D249D5A0455E3BEB24C92183609FD1A0AB77F6C2730E0A85ADEC"
-                    }
-                ]
-            }
-        ]
-    }
-]
-----
-
-The following is an example JSON test vector response object for Ascon / AEAD128 / SP800-232 in the encrypt direction.
+The following is an example JSON test vector response object for Ascon / AEAD128 / SP800-232.
 
 [source, json]
 ----
@@ -60,14 +30,43 @@ The following is an example JSON test vector response object for Ascon / AEAD128
         "isSample": true,
         "testGroups": [
             {
+                "tgId": 1,
+                "tests": [
+                    {
+                        "tcId": 1,
+                        "tag": "E2D95B2EF1A1E75AF11EF398CD5BE0E8",
+                        "ct": "BF6CEC4E476E0CBC47287ED9B07847785D6096332CE2D249D5A0455E3BEB24C92183609FD1A0AB77F6C2730E0A85ADEC"
+                    },
+                ]
+            },
+            {
+                "tgId": 2,
+                "tests": [
+                    {
+                        "tcId": 61,
+                        "tag": "3616EB39EE11827740EBB60E4A936CC8",
+                        "ct": "195CCB04AC6232B400"
+                    },
+                ]
+            },
+            {
                 "tgId": 3,
                 "tests": [
                     {
-                        "tcId": 182,
-                        "pt": "93C2292908D7B631B76AD648F9EE764F751C157615258BB1F8C653C7C0DF5345A95BB7FA6507359D83EC0FC15095EAB186300AF81F8E186D3777314284EF70D816919F9E377BEA6DE777F22916C96162DBA24190D45B251A424AC3EDD6F319947B36AABFF54C790A469C10A89BEE566D"
-                    }
+                        "tcId": 124,
+                        "pt": "66348919F866C983AAE911B3F556524216672E6A"
+                    },
                 ]
-            }
+            },
+            {
+                "tgId": 4,
+                "tests": [
+                    {
+                        "tcId": 191,
+                        "pt": "9ED0960B1BFDDA16"
+                    },
+                ]
+            },
         ]
     }
 ]
