--- a/src/ascon/sections/06-ascon-aead128-test-vectors.adoc
+++ b/src/ascon/sections/06-ascon-aead128-test-vectors.adoc
@@ -130,7 +130,7 @@ The following is an example JSON object sent from the server to the client for A
                         "ct": "C20807710C919109AC1618D872ABCD1D8D2B3372136BB90A309F55804C0856A6FB213C2FB3CB7B58D5DEA5FDFC208673"
                     }
                 ]
-                "direction": "encrypt",
+                "direction": "decrypt",
                 "supportsNonceMasking": false
             },
         ]
