--- a/src/protocol/sections/11-messaging.adoc
+++ b/src/protocol/sections/11-messaging.adoc
@@ -751,9 +751,11 @@ The available properties for module resources are:
 * *name* - `string`
 * *version* - `string`
 * *type* - `string`, valid values are:
-** `Software` - software-based modules
-** `Hardware` - hardware-based modules
-** `Firmware` - firmware-based modules
+** `software` - software-based modules
+** `hardware` - hardware-based modules
+** `firmware` - firmware-based modules
+** `softwarehybrid` - software-hybrid-based modules
+** `firmwarehybrid` - firmware-hybrid-based modules
 * *website* - `string`
 * *vendorUrl* - `string`,  identifier for a <<vendors>>
 * *addressUrl* - `string`, identifier for an <<addresses>>
