updates XTS payloadLen vs dataUnitLen requirements

--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -51,7 +51,7 @@ text. | domain
 | performCounterTests| Indicates if the implementation can perform the Counter tests which check for an always increasing (or decreasing) counter value| boolean
 | tweakLen | The domain of values allowed for ACVP-AES-FF1's tweak value. Allowed range is 0-128 bits mod 8. See <<property_grid_misc>> | domain
 | capabilities | An array of objects that describes an IUT's capabilities as they pertain to ACVP-AES-FF1 and ACVP-AES-FF3-1. See <<property_grid_misc>> and <<property_grid_ff_capabilities>> | Array of Objects
-| dataUnitLen | The length(s) of the ACVP-AES-XTS data unit supported by the IUT. It is assumed that all lengths listed by the payloadLen property are also valid data unit lengths. As such, the values for the dataUnitLen property *MUST* include all payloadLen values. If the value of the dataUnitLenMatchesPayload property is false, the dataUnitLen property SHALL be present; if the value of the dataUnitLenMatchesPayload property is true, the dataUnitLen parameter SHALL not be present. | domain
+| dataUnitLen | The length(s) of the ACVP-AES-XTS data unit supported by the IUT. It is assumed that all lengths listed by the dataUnitLen property are also valid payload lengths. As such, the values for the payloadLen property *MUST* include all dataUnitLen values. If the value of the dataUnitLenMatchesPayload property is false, the dataUnitLen property SHALL be present; if the value of the dataUnitLenMatchesPayload property is true, the dataUnitLen parameter SHALL not be present. | domain
 | dataUnitLenMatchesPayload | Whether or not the length of the data unit always matches the length of the payload in ACVP-AES-XTS | boolean
 |===
 
