Adds HMAC revision 2.0

--- a/src/mac/sections/03-supported.adoc
+++ b/src/mac/sections/03-supported.adoc
@@ -2,19 +2,30 @@
 [#supported]
 == Supported HMAC, CMAC, and GMAC Algorithms
 
-The following Message Authentication Code Algorithms *MAY* be advertised by the ACVP compliant cryptographic module:
+The following Message Authentication Code Algorithms *MAY* be advertised by the ACVP compliant cryptographic module as "algorithm" / "mode" / "revision":
 
-* HMAC-SHA-1
-* HMAC-SHA2-224
-* HMAC-SHA2-256
-* HMAC-SHA2-384
-* HMAC-SHA2-512
-* HMAC-SHA2-512/224
-* HMAC-SHA2-512/256
-* HMAC-SHA3-224
-* HMAC-SHA3-256
-* HMAC-SHA3-384
-* HMAC-SHA3-512
-* CMAC-AES
-* CMAC-TDES
-* ACVP-AES-GMAC
+* HMAC-SHA-1 / / 1.0
+* HMAC-SHA2-224 / / 1.0
+* HMAC-SHA2-256 / / 1.0
+* HMAC-SHA2-384 / / 1.0
+* HMAC-SHA2-512 / / 1.0
+* HMAC-SHA2-512/224 / / 1.0
+* HMAC-SHA2-512/256 / / 1.0
+* HMAC-SHA3-224 / / 1.0
+* HMAC-SHA3-256 / / 1.0
+* HMAC-SHA3-384 / / 1.0
+* HMAC-SHA3-512 / / 1.0
+* HMAC-SHA-1 / / 2.0
+* HMAC-SHA2-224 / / 2.0
+* HMAC-SHA2-256 / / 2.0
+* HMAC-SHA2-384 / / 2.0
+* HMAC-SHA2-512 / / 2.0
+* HMAC-SHA2-512/224 / / 2.0
+* HMAC-SHA2-512/256 / / 2.0
+* HMAC-SHA3-224 / / 2.0
+* HMAC-SHA3-256 / / 2.0
+* HMAC-SHA3-384 / / 2.0
+* HMAC-SHA3-512 / / 2.0
+* CMAC-AES / / 1.0
+* CMAC-TDES / / 1.0
+* ACVP-AES-GMAC / / 1.0
