--- a/src/mac/sections/07-hmac-responses.adoc
+++ b/src/mac/sections/07-hmac-responses.adoc
@@ -18,7 +18,7 @@ Each test group contains an array of one or more test cases. Each test case is a
 [[hmac_test_vector_response_json]]
 ==== Example HMAC Test Vector Response JSON Object
 
-The following is an example JSON test vector response object for HMAC.
+The following is an example JSON test vector response object for HMAC. The responses are the same for HMAC revision 1.0 and HMAC revision 2.0. 
 
 [source, json]
 ----
