--- a/src/ml-kem/sections/05-capabilities.adoc
+++ b/src/ml-kem/sections/05-capabilities.adoc
@@ -28,7 +28,7 @@ Each ML-KEM algorithm capability advertised is a self-contained JSON object usin
 | revision | The algorithm testing revision to use | string | See <<supported>>
 | prereqVals | Prerequisite algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
 | parameterSets | The ML-KEM parameter sets supported | array of strings | "ML-KEM-512", "ML-KEM-768", "ML-KEM-1024"
-| functions | The ML-KEM encapsulation or decapsulation modes supported | array of strings | "encapsulation", "decapsulation"
+| functions | The ML-KEM encapsulation or decapsulation modes supported | array of strings | "encapsulation", "decapsulation", "encapsulationKeyCheck", "decapsulationKeyCheck"
 |===
 
 Note: The functions property is only applicable to ML-KEM / encapDecap / FIPS203. 
