--- a/src/ml-kem/sections/05-ml-kem-encapdecap-capabilities.adoc
+++ b/src/ml-kem/sections/05-ml-kem-encapdecap-capabilities.adoc
@@ -17,6 +17,6 @@ Below is an example of the registration for ML-KEM / encapDecap / FIPS203
         }
     ],
     "parameterSets": ["ML-KEM-512", "ML-KEM-768", "ML-KEM-1024"]
-    "functions": ["encapsulation", "decapsulation"]
+    "functions": ["encapsulation", "decapsulation", "encapsulationKeyCheck", "decapsulationKeyCheck"]
 }
 ----
