--- a/src/ml-kem/sections/06-ml-kem-encapdecap-test-vectors.adoc
+++ b/src/ml-kem/sections/06-ml-kem-encapdecap-test-vectors.adoc
@@ -16,8 +16,7 @@ The test group for ML-KEM / encapDecap / FIPS203 is as follows:
 | tgId | Numeric identifier for the test group, unique across the entire vector set | integer
 | testType | The test operation performed | string
 | parameterSet | The ML-KEM parameter set used | string
-| function | Whether the tests are running encapsulation or decapsulation | string
-| dk | The decapsulation key when `"testType": "VAL"` | hex
+| function | Whether the tests are running encapsulation or decapsulation, or a key check | string
 | tests | Array of individual test vector JSON objects, which are defined in <<ML-KEM_encapDecap_tvjs>> | array
 |===
 
@@ -32,9 +31,10 @@ Each test group contains an array of one or more test cases. Each test case is a
 | JSON Value | Description | JSON type
 
 | tcId | Numeric identifier for the test case, unique across the entire vector set | integer
-| ek | The encapsulation key when `"testType": "AFT"` | hex
-| m | The random value used to derive the shared key when `"testType": "AFT"` | hex
-| c | The cipher text when `"testType": "VAL"` | hex
+| dk | The decapsulation key when the function is "decapsulation" or "decapsulationKeyCheck" | hex
+| ek | The encapsulation key when the function is "encapsulation" or "encapsulationKeyCheck" | hex
+| m | The random value used to derive the shared key when the function is "encapsulation" | hex
+| c | The cipher text when the function is "decapsulation" | hex
 |===
 
 The following is an example JSON object sent from the server to the client for ML-KEM / encapDecap / FIPS203.
@@ -69,11 +69,35 @@ The following is an example JSON object sent from the server to the client for M
                 "testType": "VAL",
                 "parameterSet": "ML-KEM-512",
                 "function": "decapsulation",
-                "dk": "DF479939FAA...",
                 "tests": [
                     {
                         "tcId": 76,
+                        "dk": "DF479939FAA...",
                         "c": "49D873A9..."
+                    }
+                ]
+            },
+            {
+                "tgId": 3,
+                "testType": "VAL",
+                "parameterSet: "ML-KEM-512",
+                "function": "encapsulationKeyCheck",
+                "tests": [
+                    {
+                        "tcId": 100,
+                        "ek": "ABCD..."
+                    }
+                ]
+            },
+            {
+                "tgId": 4,
+                "testType": "VAL",
+                "parameterSet: "ML-KEM-512",
+                "function": "decapsulationKeyCheck",
+                "tests": [
+                    {
+                        "tcId": 115,
+                        "dk": "ABCD..."
                     }
                 ]
             }
