--- a/src/ml-kem/sections/07-ml-kem-encapdecap-responses.adoc
+++ b/src/ml-kem/sections/07-ml-kem-encapdecap-responses.adoc
@@ -20,8 +20,9 @@ Each test group contains an array of one or more test cases. Each test case is a
 | JSON Value | Description | JSON type
 
 | tcId | The test case identifier | integer
-| c | The generated ciphertext only for `"testType": "AFT"` | hex
-| k | The generated shared secret | hex
+| c | The generated ciphertext only for when function is "encapsulation" | hex
+| k | The generated shared secret for when function is "decapsulation" | hex
+| testPassed | Whether the key was valid when function is "encapsulationKeyCheck" or "decapsulationKeyCheck" | boolean
 |===
 
 The following is an example JSON test vector response object for ML-KEM / encapDecap / FIPS203.
@@ -51,6 +52,24 @@ The following is an example JSON test vector response object for ML-KEM / encapD
                     {
                         "tcId": 76,
                         "k": "87B9103AA..."
+                    }
+                ]
+            },
+            {
+                "tgId": 3,
+                "tests": [
+                    {
+                        "tcId": 100,
+                        "testPassed": false
+                    }
+                ]
+            },
+            {
+                "tgId": 4,
+                "tests": [
+                    {
+                        "tcId": 115,
+                        "testPassed": true
                     }
                 ]
             }
