Updates README, index.html, and msgLen

--- a/src/mac/sections/05-hmac-capabilities.adoc
+++ b/src/mac/sections/05-hmac-capabilities.adoc
@@ -28,7 +28,7 @@ Each algorithm capability advertised is a self-contained JSON object using the f
 | prereqVals | prerequisite algorithm validations | array of prereqAlgVal objects | See <<prereq_algs>>
 | keyLen | The keyLen Domain supported by the IUT in bits | domain | Min: 8, Max: 524288, Increment: 8
 | macLen | The supported mac sizes, maximum is dependent on algorithm, see <<hmac_supported_algs>> | domain | Min: 32
-| messageLen | The supported message sizes | domain | Min: 8, Max: 4096, Increment: 8
+| msgLen | The supported message sizes | domain | Min: 0, Max: 4096, Increment: 8
 |===
 
 'keyLen' for HMAC contains a Domain of values, the server *MAY* choose values defined by these rules:
@@ -37,7 +37,7 @@ Each algorithm capability advertised is a self-contained JSON object using the f
 * The Hash's block length.
 * Values above the Hash's block length.
 
-'macLen' and 'messageLen' for HMAC contains a Domain of values, the server *MAY* choose values defined by these rules:
+'macLen' and 'msgLen' for HMAC contains a Domain of values, the server *MAY* choose values defined by these rules:
 
 * The smallest length supported
 * The largest length supported
@@ -114,7 +114,7 @@ The following is an example JSON object advertising support for HMAC revision 2.
       "increment": 8
     }
   ],
-  "messageLen": [
+  "msgLen": [
     {
       "min": 8,
       "max": 4096,
