Adds msgLen and keyLen to test case properties and example

--- a/src/mac/sections/06-hmac-test-vectors.adoc
+++ b/src/mac/sections/06-hmac-test-vectors.adoc
@@ -58,6 +58,8 @@ Each test group contains an array of one or more test cases. Each test case is a
 | tcId | Numeric identifier for the test case, unique across the entire vector set | integer
 | key | The value of the key | hex
 | msg | Value of the message | hex
+| msgLen | Length of msg in bits | integer
+| keyLen | Length of key in bits | integer
 | macLen | Length of MAC in bits to generate | integer
 |===
 
@@ -113,18 +115,24 @@ The following is an example JSON test vector object for HMAC revision 2.0, trunc
                 "tcId": 1,
                 "key": "0CBB3AA866",
                 "msg": "28CD4091D45F28CD",
+                "msgLen": 64,
+                "keyLen": 40,
                 "macLen": 128
             },
             {
                 "tcId": 2,
                 "key": "7FB3F60ACB9FB7",
                 "msg": "9F224BF653F9BE143FF8D12761F7",
-                "macLen": 80
+                "msgLen": 112,
+                "keyLen": 56,
+                "macLen": 80,
             },
             {
                 "tcId": 3,
                 "key": "3834463234DA",
                 "msg": "F0FA740D261D5916B06F09AFBB04C94E",
+                "msgLen": 128,
+                "keyLen": 48,
                 "macLen": 160
             }
         ]
